--- a/package.json
+++ b/package.json
@@ -11,29 +11,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.1.1",
-    "@angular/common": "~10.1.1",
-    "@angular/compiler": "~10.1.1",
-    "@angular/core": "~10.1.1",
-    "@angular/forms": "~10.1.1",
-    "@angular/platform-browser": "~10.1.1",
-    "@angular/platform-browser-dynamic": "~10.1.1",
-    "@angular/router": "~10.1.1",
+    "@angular/animations": "~11.1.2",
+    "@angular/cdk": "^11.1.2",
+    "@angular/common": "~11.1.2",
+    "@angular/compiler": "~11.1.2",
+    "@angular/core": "~11.1.2",
+    "@angular/forms": "~11.1.2",
+    "@angular/material": "^11.1.2",
+    "@angular/platform-browser": "~11.1.2",
+    "@angular/platform-browser-dynamic": "~11.1.2",
+    "@angular/router": "~11.1.2",
+    "ag-grid-angular": "^25.0.1",
+    "ag-grid-community": "^25.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1001.1",
-    "@angular/cli": "~10.1.1",
-    "@angular/compiler-cli": "~10.1.1",
+    "@angular-devkit/build-angular": "~0.1101.3",
+    "@angular/cli": "~11.1.3",
+    "@angular/compiler-cli": "~11.1.2",
     "@types/node": "^12.11.1",
-    "@types/jasmine": "~3.5.0",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "karma": "~5.2.3",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
