--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "angular-star-rating": "^4.0.0-beta.3",
     "css-star-rating": "^1.2.4",
     "firebase": "^8.2.9",
+    "jspdf": "^2.3.1",
+    "jspdf-autotable": "^3.5.15",
     "ngx-extended-pdf-viewer": "*",
     "ngx-spinner": "^11.0.1",
     "rxjs": "~6.6.0",
@@ -41,6 +43,7 @@
     "@angular/compiler-cli": "~11.1.2",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jspdf": "^2.0.0",
     "@types/node": "^12.11.1",
     "angular-cli-ghpages": "^1.0.0-rc.1",
     "codelyzer": "^6.0.0",
