--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "rxjs": "~6.6.0",
     "sweetalert2": "^10.15.5",
     "tslib": "^2.0.0",
+    "xlsx": "^0.17.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
