Add desmatricula automatica al entrar al curso

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "cSpell.language": ",es",
     "cSpell.words": [
         "Exercises"
-    ]
+    ],
+    "angular.enable-strict-mode-prompt": false
 }
