Avance diseñador certificados carreras

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "angular-star-rating": "^4.0.0-beta.3",
     "css-star-rating": "^1.2.4",
     "firebase": "^8.2.9",
-    "jspdf": "^2.3.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.15",
     "ngx-extended-pdf-viewer": "*",
     "ngx-spinner": "^11.0.1",
